--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Sweeft Step 2 Task",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node index.js"
   },
   "author": "Giorgi Chutlashvili (Vumpy)",
   "license": "ISC",
@@ -17,5 +19,8 @@
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.7.1"
   }
 }
